# DT-receipt-ocr

./: .gitignore  .pre-commit-config.yaml  README.md  document_extraction.py  extract_text.py  image_utils.py  llm_extract.py  pyproject.toml  requirements.txt
src/dt_receipt_ocr/: main.py
src/dt_receipt_ocr/conf/: main.yaml
src/dt_receipt_ocr/core/: fetcher.py  pq7_pipeline.py  runner.py  utils.py
src/dt_receipt_ocr/models/: __init__.py  ocr.py
src/dt_receipt_ocr/routers/v1/: ocr.py
