[project]
authors = [
    { name = "Ky Anh", email = "202909747+anh-pham-vns@users.noreply.github.com" },
]
name = "DT-receipt-ocr"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["dependency-injector>=4.46.0,<5", "paddleocr>=2.10.0,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "paddle"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
dt_receipt_ocr = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
fastapi = ">=0.115.12,<0.116"
openai = ">=1.77.0,<2"
sqlmodel = ">=0.0.24,<0.0.25"
pydantic = ">=2.11.3,<3"
jaxtyping = ">=0.2.36,<0.3"
paddlepaddle = ">=3.0.0,<4"
hydra-core = ">=1.3.2,<2"
omegaconf = ">=2.3.0,<3"

[tool.pixi.feature.paddle.dependencies]
ccache = ">=4.11.3,<5"
pillow = "*"
setuptools = "*"

[tool.pixi.environments]
default = ["paddle"]
