[project]
authors = [
    { name = "Ky Anh", email = "202909747+anh-pham-vns@users.noreply.github.com" },
]
name = "DT-receipt-ocr"
requires-python = ">= 3.12"
version = "0.1.0"
dependencies = ["dependency-injector>=4.46.0,<5", "paddleocr>=2.10.0,<3"]

[tool.pixi.pypi-dependencies]
dt_receipt_ocr = { path = ".", editable = true }

[tool.pixi.tasks]
api = { cmd = "fastapi run main.py", cwd = "src/dt_receipt_ocr/" }
api_dev = { cmd = "fastapi dev main.py", cwd = "src/dt_receipt_ocr/" }

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "paddle"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = "3.12.*"
fastapi = ">=0.115.12,<0.116"
openai = ">=1.77.0,<2"
sqlmodel = ">=0.0.24,<0.0.25"
pydantic = ">=2.11.4,<3"
jaxtyping = ">=0.2.36,<0.3"
hydra-core = ">=1.3.2,<2"
omegaconf = ">=2.3.0,<3"
pdf2image = ">=1.17.0,<2"
puremagic = ">=1.29,<2"
fsspec = ">=2025.3.2,<2026"
s3fs = ">=2025.3.2,<2026"
paddlepaddle = ">=3.0.0,<4"
jupyterlab = ">=4.4.2,<5"
matplotlib = ">=3.10.1,<4"

[tool.pixi.feature.paddle.dependencies]
ccache = "*"
pillow = "*"
setuptools = "*"

[tool.pixi.feature.cuda.system-requirements]
cuda = "12"

[tool.pixi.feature.cuda.target.linux-64.dependencies]
paddlepaddle-gpu = ">=3.0.0,<4"
paddlepaddle-cuda = "12.6.*"

[tool.pixi.environments]
default = ["paddle", "default"]
cuda = ["cuda"]
